# svg-playground

./: .travis.yml  LICENSE  README.md  stack.yaml  svg-playground.cabal
app/: Main.hs
data/: enemy.json  enemy_death_contract.json  enemy_death_expand.json  player_death.json  store_green_finalize.json  store_green_initial.json  store_purchase_failure_first.json  store_purchase_failure_second.json  store_purchase_pending_first.json  store_purchase_pending_second.json  store_purchase_success.json
src/: Animation.hs  AnimationConfig.hs  SVG.hs
test/: AnimationConfigSpec.hs  AnimationSpec.hs  SVGSpec.hs
