name:                svg-playground
version:             0.1.0.0
synopsis:            Creates animation frames for game sprites
description:         Please see README.md
homepage:            https://github.com/matt-keibler/svg-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Keibler
copyright:           2017 Matt Keibler
category:            Image
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Animation
                     , AnimationConfig
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.1
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable svg-playground
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , svg-builder >= 0.1
                     , text >= 0.11
                     , bytestring >= 0.10
                     , svg-playground
  default-language:    Haskell2010

test-suite svg-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , svg-playground
                     , hspec
                     , QuickCheck
                     , aeson >= 1.1
                     , bytestring >= 0.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-keibler/svg-playground
