name:                svg-playground
version:             0.1.0.0
synopsis:            Creates animation frames for game sprites
description:         Please see README.md
homepage:            https://github.com/amy-keibler/svg-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Amy Keibler
copyright:           2017 Amy Keibler
category:            Image
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Animation
                     , AnimationConfig
                     , SVG
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.1
                     , bytestring >= 0.10
                     , svg-builder >= 0.1
                     , text >= 0.11
                     , unordered-containers >= 0.2
  default-language:    Haskell2010

executable svg-animator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , svg-builder >= 0.1
                     , text >= 0.11
                     , bytestring >= 0.10
                     , svg-playground
  default-language:    Haskell2010

test-suite svg-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AnimationConfigSpec
                     , AnimationSpec
                     , SVGSpec
  build-depends:       base
                     , svg-playground
                     , hspec
                     , QuickCheck
                     , aeson >= 1.1
                     , bytestring >= 0.10
                     , svg-builder >= 0.1
                     , text >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amy-keibler/svg-playground
